Added pest and test for feature adduser
