# public/docs/openapi.yaml
@@ -45,7 +45,7 @@ paths:
   /api/v1/user/add:
     post:
       summary: 'User Add'
-      description: "This endpoint allows you to add a users to the database. It's a really useful endpoint,\n<aside class=\"notice\">Username should be unique :)</aside>"
+      description: "This endpoint allows you to add a users to the database. It's a really useful endpoint,\n<aside class=\"notice\">Username should be unique :)</aside>\n<aside class=\"notice\">There are settings for default password</aside>"
       parameters:
         -
           in: header
@@ -65,27 +65,10 @@ paths:
         200:
           description: ''
           content:
-            application/json:
+            text/plain:
               schema:
-                type: object
-                example:
-                  id: 4
-                  name: 'Jessica Jones'
-                  roles:
-                    - admin
-                properties:
-                  id:
-                    type: integer
-                    example: 4
-                  name:
-                    type: string
-                    example: 'Jessica Jones'
-                  roles:
-                    type: array
-                    example:
-                      - admin
-                    items:
-                      type: string
+                type: string
+                example: "{\n \"id_user\": 4,\n}"
       tags:
         - Endpoints
       requestBody:
@@ -98,14 +81,62 @@ paths:
                 username:
                   type: string
                   description: 'The username of the user.'
-                  example: vero
+                  example: et
                 name:
                   type: string
                   description: 'The name of the user.'
-                  example: est
+                  example: illum
               required:
                 - username
                 - name
+      security: []
+  /api/v1/user/authenticate:
+    post:
+      summary: 'User Authenticate'
+      description: "This endpoint allows you to authenticate as user.\n<aside class=\"notice\">The default password are 'nobi'</aside>"
+      parameters:
+        -
+          in: header
+          name: Content-Type
+          description: ''
+          example: application/json
+          schema:
+            type: string
+        -
+          in: header
+          name: Accept
+          description: ''
+          example: application/json
+          schema:
+            type: string
+      responses:
+        200:
+          description: ''
+          content:
+            text/plain:
+              schema:
+                type: string
+                example: "{\n \"id_user\": 4,\n}"
+      tags:
+        - Endpoints
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                username:
+                  type: string
+                  description: 'The username of the user.'
+                  example: sunt
+                password:
+                  type: string
+                  description: 'The password of the user.'
+                  example: voluptas
+              required:
+                - username
+                - password
       security: []
 tags:
   -
